[package]
name = "rustamaner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustamaner"
path = "src/main.rs"

[lib]
name = "rustamaner_lib"
path = "src/lib.rs"

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
pbkdf2 = "0.12"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1.0"
dirs = "5.0"
egui = "0.30"
eframe = "0.30"
hmac = "0.12"